# python-project-guidelines

./: AGENTS.md  PYTHON_GUIDELINES.md  README.md  SECURITY_MANUAL.md
git/: COMMIT_MESSAGE_GUIDE.md  COMMIT_UNIT_GUIDE.md  GITFLOW_GUIDE.md  GITHUB_INTEGRATION_GUIDE.md  GIT_COMMANDS.md  GIT_GUIDELINES.md  README.md
git/cook-book/: README.md  amend-commit-message.md  amend-missing-file.md  cherry-pick-specific-commit.md  clean-up-history-before-push.md  connect-github-remote.md  discard-local-change.md  find-bug-introducing-commit.md  move-work-to-correct-branch.md  organize-commit-units.md  resolve-conflict.md  revert-pushed-change.md  stash-for-urgent-work.md  unstage-wrong-file.md
git/cook-book/rebase/: README.md  squash-non-consecutive-commits.md  squash-same-work-commits.md
python/: COMMENT_GUIDE.md  README.md  RUFF_LINT_GUIDE.md
security/: PUBLIC_SERVER_SECURITY_GUIDELINE.md  README.md  SECURITY_MANUAL.md
security/cook-book/: README.md  ubuntu-public-server-basic-hardening.md
security/incident-cases/: IMPORTANT_CYBER_INCIDENTS.md
template/: .gitignore  AGENT.md  AGENTS.md  DEVELOPMENT.md  Makefile  README.md  mise.toml  pyproject.toml
template/.github/workflows/: ci.yml
template/.opencode/: opencode.json
template/.zed/: settings.json
template/src/: main.py
template/tests/: test_main.py
