[project]
name = "sample-project"
version = "0.1.0"
description = "Project template based on uv, ruff, and ty."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
sample-project = "src.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.12.0",
    "ty>=0.0.1a16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ty]

[tool.pytest.ini_options]
pythonpath = ["."]
